[fix] Tests using arquilian